[package]
name = "pomo"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "^0.8.6", features = [ "sqlite", "runtime-tokio", "tls-native-tls" ] }
tokio = { version = "1.47.1", features = ["rt", "macros"] }
anyhow = "^1"
clap = { version = "4", features = ["derive"] }
indicatif = "0.18.0"
chrono = "0.4.42"
tempfile = "3.23.0"
notify-rust = "4.11.7"
serde = "1.0.228"
toml = "0.9.8"
